Complete the content for Tuna Lasagne page

--- a/recipes/tuna_lasagne.html
+++ b/recipes/tuna_lasagne.html
@@ -7,6 +7,44 @@
 <body>
     
     <h1>Tuna Lasagne</h1>
+    <img src="https://img.taste.com.au/LQh5Re5X/w720-h480-cfill-q80/taste/2017/10/easy-tuna-lasagne-131287-1.jpg">
+
+    <h2>Description</h2>
+    <p>This easy tuna lasagne with courgette, pepper and ricotta will become your
+         budget family dinner of the season.</p>
+    <p>The ricotta saves time making a white sauce
+        and makes it extra delicious.</p> 
+   
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 tbsp extra virgin olive oil</li>
+        <li>1 onion, finely chopped</li>
+        <li>2 courgettes, coarsely chopped</li>
+        <li>1 red pepper, deseeded, coarsely chopped</li>
+        <li>2 garlic cloves, crushed or chopped</li>
+        <li>400g can diced tomatoes</li>
+        <li>250ml (1 cup) passata</li>
+        <li>1 tsp oregano</li>
+        <li>425g canned tuna (3 tins) drained, flaked into large pieces</li>
+        <li>500g smooth ricotta</li>
+        <li>1 lemon, rind finely grated</li> 
+        <li>1 egg, lightly whisked</li>
+        <li>200g grated three cheese blend (ideally cheddar, mozzarella and parmesan)</li>
+        <li>5-6 lasagne sheets</li>
+        <li>Handful of fresh parsley</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat oven to 190°C/170°C fan. Lightly grease a 19 x 25cm (base measurement) baking dish. Heat the oil in a large, deep frying pan over medium heat. Add the onion, courgette and pepper. Cook, stirring often, for 5 minutes or until soft. Add the garlic and cook, stirring, for 1 minute or until aromatic.</li>
+        <li>Stir in the tomato, passata, and oregano. Season. Add the tuna and gently fold to combine.</li>
+        <li>Combine the ricotta, lemon rind and egg in a bowl. Season with salt and stir until smooth. Add half the grated cheese.</li>
+        <li>Cover the base of the prepared dish with a layer of lasagne sheets, trimming to fit. Spread one-third of the tuna mixture over, then top with another layer of lasagne sheets. Repeat with the remaining tuna mixture and lasagne sheets, finishing with a layer of lasagne sheets.</li>
+        <li>Spread the ricotta mixture over the top of the lasagne. Sprinkle with parsley leaves and the remaining grated cheese. Bake for 40-45 minutes or until golden. Set aside for 10 minutes to cool slightly before serving.</li>
+       
+    </ol>
+
 
 </body>
 </html>
