Make two more recipe pages, with links in index

--- a/recipes/tuna_lasagne.html
+++ b/recipes/tuna_lasagne.html
@@ -10,13 +10,10 @@
     <img src="https://img.taste.com.au/LQh5Re5X/w720-h480-cfill-q80/taste/2017/10/easy-tuna-lasagne-131287-1.jpg">
 
     <h2>Description</h2>
-    <p>This easy tuna lasagne with courgette, pepper and ricotta will become your
-         budget family dinner of the season.</p>
-    <p>The ricotta saves time making a white sauce
-        and makes it extra delicious.</p> 
+    <p>This easy tuna lasagne with courgette, pepper and ricotta will become your budget family dinner of the season.</p>
+    <p>The ricotta saves time making a white sauce and makes it extra delicious.</p> 
    
-
-    <h2>Ingredients</h2>
+    <h2>Ingredients (for 6 people)</h2>
     <ul>
         <li>1 tbsp extra virgin olive oil</li>
         <li>1 onion, finely chopped</li>
@@ -44,7 +41,5 @@
         <li>Spread the ricotta mixture over the top of the lasagne. Sprinkle with parsley leaves and the remaining grated cheese. Bake for 40-45 minutes or until golden. Set aside for 10 minutes to cool slightly before serving.</li>
        
     </ol>
-
-
 </body>
 </html>
