--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>Liz's Recipes</h1>
-    <a href="recipes/tuna_lasagne.html">Tuna Lasagne</a>
+    <ul>
+    <li><a href="recipes/tuna_lasagne.html">Tuna Lasagne</a></li>
+    <li><a href="recipes/cauliflower_chilli_pasta.html">Cauliflower Chilli Pasta</a></li>
+    <li><a href="recipes/fish_chickpea_stew.html">Fish and Chickpea Stew</a></li>
+    
+    </ul>
 </body>
 </html>
