Add alt text to recipe page images

--- a/recipes/fish_chickpea_stew.html
+++ b/recipes/fish_chickpea_stew.html
@@ -5,9 +5,9 @@
     <title>Fish and Chickpea Stew</title>
 </head>
 <body>
-    
+    <!-- This recipe taken from https://www.taste.com.au/recipes/fish-chickpea-stew-recipe/zbvph9kb -->
     <h1>Fish and Chickpea Stew</h1>
-    <img src="https://img.taste.com.au/7d8qOapm/w643-h428-cfill-q90/taste/2019/05/fish-chickpea-stew-149667-1.jpg">
+    <img src="https://img.taste.com.au/7d8qOapm/w643-h428-cfill-q90/taste/2019/05/fish-chickpea-stew-149667-1.jpg" alt="Image of fish and chickpea stew">
 
     <h2>Description</h2>
     <p>Warm yourself from the inside with this mouth-watering fish and chickpea stew that will leave everyone at the table smiling.</p>
