--- a/recipes/cauliflower_chilli_pasta.html
+++ b/recipes/cauliflower_chilli_pasta.html
@@ -7,7 +7,7 @@
 <body>
     
     <h1>Cauliflower Chilli Pasta</h1>
-    <img src="https://img.taste.com.au/QdTQs1Pa/w643-h428-cfill-q90/taste/2016/11/quick-cauliflower-pasta-with-parmesan-chilli-and-garlic-108086-1.jpeg">
+    <img src="https://img.taste.com.au/QdTQs1Pa/w643-h428-cfill-q90/taste/2016/11/quick-cauliflower-pasta-with-parmesan-chilli-and-garlic-108086-1.jpeg" alt="Image of cauliflower chilli pasta">
 
     <h2>Description</h2>
     <p>For a meat-free weeknight meal try this speedy cauliflower pasta topped with fresh basil and parmesan cheese.</p>
