--- a/recipes/tuna_lasagne.html
+++ b/recipes/tuna_lasagne.html
@@ -7,7 +7,7 @@
 <body>
     
     <h1>Tuna Lasagne</h1>
-    <img src="https://img.taste.com.au/LQh5Re5X/w720-h480-cfill-q80/taste/2017/10/easy-tuna-lasagne-131287-1.jpg">
+    <img src="https://img.taste.com.au/LQh5Re5X/w720-h480-cfill-q80/taste/2017/10/easy-tuna-lasagne-131287-1.jpg" alt="Image of tuna lasagne">
 
     <h2>Description</h2>
     <p>This easy tuna lasagne with courgette, pepper and ricotta will become your budget family dinner of the season.</p>
