Create stylesheet and initial styling

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Liz's Recipe Website</title>
 </head>
 <body>
     <h1>Liz's Recipes</h1>
-    <ul>
-    <li><a href="recipes/tuna_lasagne.html">Tuna Lasagne</a></li>
-    <li><a href="recipes/cauliflower_chilli_pasta.html">Cauliflower Chilli Pasta</a></li>
-    <li><a href="recipes/fish_chickpea_stew.html">Fish and Chickpea Stew</a></li>
-    
+    <ul class="recipe-link">
+            <li><a href="recipes/tuna_lasagne.html">Tuna Lasagne</a></li>
+            <li><a href="recipes/cauliflower_chilli_pasta.html">Cauliflower Chilli Pasta</a></li>
+            <li><a href="recipes/fish_chickpea_stew.html">Fish and Chickpea Stew</a></li> 
     </ul>
 </body>
 </html>
