--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Liz's Recipe Website</title>
 </head>
 <body>
-    <h1>Liz's Recipes</h1>
-    <ul class="recipe-link">
+    <h1 class="title">Liz's Recipes</h1>
+    <ul class="recipe-list">
             <li><a href="recipes/tuna_lasagne.html">Tuna Lasagne</a></li>
             <li><a href="recipes/cauliflower_chilli_pasta.html">Cauliflower Chilli Pasta</a></li>
             <li><a href="recipes/fish_chickpea_stew.html">Fish and Chickpea Stew</a></li> 
